# Tiny-Local-Multi-Agent-System

./: .gitattributes  README.md  pyproject.toml  run_app.bat
app/: app.py
app/llm/: chat.py
app/llm/agent_manager/: agents.json  service.py
app/llm/engine/: service.py
app/llm/query_manager/: service.py
app/models/: qwen2.5-1.5b-instruct-q8_0.gguf
